--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,7 +27,7 @@
     <% } %>
      '>
     <div class='contaner'>
-      <div class='jumbotron'>
+      <div class='jumbotron center'>
         <h1>Balance of power goes here</h1>
       </div>
       <div class='row'>
@@ -59,12 +59,51 @@
                         </div>
                       </div>
                       <div class='clear'>
-                        <button type="submit" class="btn btn-primary pull-right">Login</button>
+                        <button type="submit" class="btn btn-primary pull-right">Sign in</button>
                       </div>
                       <div class='clear center'>
                         <a href="/register">Sign up</a>
                       </div>
                   </form>
+              </div>
+          </div>
+          <div class="panel panel-default links-section">
+              <div class="panel-heading">Links section</div>
+              <div class="panel-body">
+                  <img src="/images/astu_logo_ph.png" class='background' />
+                  <strong>
+                    Community
+                  </strong>
+                  <ul>
+                    <li>
+                      <a href="/">Rankings</a>
+                    </li>
+                    <li>
+                      <a href="/">Challenge Points</a>
+                    </li>
+                  </ul>
+
+                  <strong>
+                    The Challenges
+                  </strong>
+                  <ul>
+                    <li>
+                      <a href="/">Warm ups</a>
+                    </li>
+                    <li>
+                      <a href="/">Patterns</a>
+                    </li>
+                    <li>
+                      <a href="/">Logical</a>
+                    </li>
+                  </ul>
+              </div>
+          </div>
+
+          <div class="panel panel-default">
+              <div class="panel-heading">Static box</div>
+              <div class="panel-body">
+                  Some data here
               </div>
           </div>
         </div>
@@ -76,13 +115,43 @@
           </div>          
         </div>
         <div class='col-md-2'>
-          <div class="panel panel-default">
-              <div class="panel-body">
-                  Basic panel
-              </div>
+          <img src="/images/mjd_tree_ph.png"/>
+          <div class='clear center'>
+            <a href="/">Main site</a>
+            |
+            <a href="/">Wiki</a>
+          </div>
+          <div class='clear center margin-top'>
+            Find us elsewhere
+          </div>
+          <div class='row'>
+            <div class='col-md-4'>
+              <div class='icon-stub'></div>
+              Facebook
+            </div>
+            <div class='col-md-4'>
+              <div class='icon-stub'></div>
+              Twitter
+            </div>
+            <div class='col-md-4'>
+              <div class='icon-stub'></div>
+              Youtube
+            </div>
+          </div>
+          <div class="panel panel-default margin-top" style='height:400px;'>
+              <div class="panel-body center">
+                  Advert goes here
+              </div>              
           </div>
         </div>
       </div>      
+      <div class='row'>
+        <div class="panel panel-default margin-top">
+              <div class="panel-body center">
+                  <h2>Footer</h2>
+              </div>              
+          </div>
+      </div>
     </div>
 
     <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
