--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -42,3 +42,11 @@ img.background{
   top: 0;
   left: 0;
 }
+.team{
+	cursor: pointer;
+	box-sizing: border-box ;
+}
+.team.selected{
+	border: 3px solid #009688;
+	border-radius: 5px;
+}
