--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,98 @@
-<div>
-    Register!
+<div ng-controller='AuthController as auth'>
+	<h2>
+		Sign Up!
+	</h2>
+	<div>
+		To use the site and join a team, you need to register an account. Please enter your details below. 
+	</div>
+	<div class='margin-top'>
+		<form class="form-horizontal" ng-send='auth.register()'>
+		    <fieldset class='margin-top'>
+		        <legend>Enter your details</legend>
+		        <div class="form-group">
+		            <label for="name" class="col-md-3 control-label">User name</label>
+		            <div class="col-md-9">
+		                <input type="text" 
+		                ng-model='auth.model.name'
+		                class="form-control" id="name" placeholder="User name">
+		            </div>
+		        </div>
+		        <div class="form-group">
+		            <label for="inputEmail" class="col-md-3 control-label">Email</label>
+		            <div class="col-md-9">
+		                <input type="email" 
+		                ng-model='auth.model.email'
+		                class="form-control" id="inputEmail" placeholder="Email">
+		            </div>
+		        </div>
+		        <div class="form-group">
+		            <label for="pass" class="col-md-3 control-label">Password</label>
+		            <div class="col-md-9">
+		                <input type="password"
+		                 ng-model='auth.model.password'
+		                 class="form-control" id="pass" placeholder="Password">
+		            </div>
+		        </div>
+		        <div class="form-group">
+		            <label for="pass-conf" class="col-md-3 control-label">Confirm password</label>
+		            <div class="col-md-9">
+		                <input type="password" 
+		                ng-model='auth.model.passwordConfirm'
+		                class="form-control" id="pass-conf" placeholder="Confirm password">
+		            </div>
+		        </div>
+		    </fieldset>
+
+		    <fieldset class='margin-top'>
+		        <legend>Choose your team 
+		        	<span class="badge" title='Choose wisely, you cannor change easily...'>?</span></legend>
+		        <div class="form-group">
+		            <div 
+		            ng-click='auth.model.team="astu"'
+		            ng-class='{selected: auth.model.team=="astu"}'
+		            class="col-md-4 center team">
+		                <div class='icon-stub'></div>
+		                Join ASTU as an Officer
+		            </div>
+		            <div 
+		            ng-click='auth.model.team="blackdragon"'
+		            ng-class='{selected: auth.model.team=="blackdragon"}'
+		            class="col-md-4 center team">
+		                <div class='icon-stub'></div>
+		                Join Black Dragon as an Initate
+		            </div>
+		            <div 
+		            ng-click='auth.model.team="sorcesec"'
+		            ng-class='{selected: auth.model.team=="sorcesec"}'
+		            class="col-md-4 center team">
+		                <div class='icon-stub'></div>
+		                Join SorceSec as a Hacker
+		            </div>
+		        </div>
+		    </fieldset>
+
+		    <fieldset class='margin-top'>
+		        <legend>Crack your first code</legend>
+		        <h4>Speak, friend, and enter!</h4>
+		        <div class="form-group">
+		            <label for="pass-conf" class="col-md-3 control-label">Enter the code</label>
+		            <div class="col-md-8">
+		                <input type="text" 
+		                ng-model='auth.model.captcha'
+		                class="form-control" id="captcha" placeholder="Code">		                
+		            </div>
+		            <div class='col-md-1'>
+		            	<span class="badge" 
+		                title="You need a copy of Direct Action to work out the Cypher Code. Click on the 'Buy the books' tab above.">?</span>
+		            </div>
+		        </div>
+		    </fieldset>
+		    <fieldset class='margin-top center'>
+		        <p>By registering to this site, you agree to our <a href="/terms">Terms & Conditions</a> </p>
+		        <div class="form-group center">
+		            <button type='submit' ng-disabled='!auth.validate()' class='btn btn-success btn-raised'>Sign-up</button>
+		        </div>
+		    </fieldset>
+		</form>
+	</div>
 </div>
