--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -135,7 +135,7 @@
           </div>          
         </div>
         <div class='col-md-2'>
-          <img src="/images/mjd_tree_ph.png"/>
+          <img src="/images/mjd_tree_ph.png" style='width: 100%;'/>
           <div class='clear center'>
             <a href="/">Main site</a>
             |
