--- a/views/recoverPassword.ejs
+++ b/views/recoverPassword.ejs
@@ -1,16 +1,26 @@
 <h1>Lost password</h1>
-<p>Please, enter the email address used to create account.</p>
-<p>New password will be sent on this email.</p>
-<p>
-	<div class='row'>
-		<div class='col-md-1'>
-			<label for='email'>Email: </label>
-		</div>
-		<div class='col-md-4'>
-			<input type='text' id='email' class='form-control'/>
-		</div>
-	</div>	
-</p>
-<p>
-	<button class='btn btn-primary'>Send the new password</button>
-</p>
+<div ng-hide='auth.newPasswordSent'>
+	<p>Please, enter the email address used to create account.</p>
+	<p>New password will be sent on this email.</p>
+	<p>
+		<div class='row'>
+			<div class='error ng-hide' ng-hide='auth.model.message'>
+		    	{{auth.model.message}}
+		    </div>
+			<div class='col-md-1'>
+				<label for='email'>Email: </label>
+			</div>
+			<div class='col-md-4'>
+				<input type='text' id='email' 
+				ng-model='auth.model.email'
+				class='form-control'/>
+			</div>
+		</div>	
+	</p>
+	<p>
+		<button class='btn btn-primary' ng-click='auth.recoverPassword()'>Send the new password</button>
+	</p>
+</div>
+<div ng-show='auth.newPasswordSent'>
+	<h3>A new password was sent to your email.</h3>
+</div>
