--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -59,14 +59,14 @@
                         <label for="inputEmail" class="col-lg-12 control-label">Email</label>
                         <div class="col-lg-12">
                             <input type='text' class='form-control' id="inputEmail" 
-                            ng-model='model.email' />
+                            ng-model='auth.model.email' />
                         </div>
                       </div>
                       <div class="form-group">
                         <label for="password" class="col-lg-12 control-label">Password</label>
                         <div class="col-lg-12">
                             <input type='password' class='form-control' id="password" 
-                            ng-model='model.password' />
+                            ng-model='auth.model.password' />
                         </div>
                       </div>
                       <div class='clear center'>
