--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,6 @@
 <div>
 	<h2>
-		Profile of <%- user.name %>
+		Profile of <%= user.name %>
 	</h2>
 	<div class='row' style='text-align:center;'>
 		<div class='col-md-6'>
@@ -59,6 +59,21 @@
 						<% } %>
 		            </div>
 		        </div>
+
+		        <div class="form-group row">
+		            <label class="col-md-3 control-label ch-label">Location</label>
+		            <div class="col-md-9">
+		                <%= user.location%>
+		            </div>
+		        </div>
+
+		        <div class="form-group row">
+		            <label class="col-md-3 control-label ch-label">Signature</label>
+		            <div class="col-md-9">
+		                <%= user.signature%>
+		            </div>
+		        </div>
+
 		    </fieldset>
 	    </div>
 	</div>
