--- a/views/adminLayout.ejs
+++ b/views/adminLayout.ejs
@@ -12,7 +12,7 @@
     <link href="/css/roboto.min.css" rel="stylesheet">
     <link href="/css/material.min.css" rel="stylesheet">
     <link href="/css/ripples.min.css" rel="stylesheet">
-    <link href="/css/admin.css" rel="stylesheet">
+    <link href="/styles/admin.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="/styles/main.css">
     
@@ -28,19 +28,19 @@
     <% } %>
      '>
     <div class='contaner'>
-      <div class='jumbotron center'>
+      <div class='jumbotron center alt-back'>
         <h1>Admin module</h1>
       </div>
       <div class='row'>
-        <div class='col-md-2'></div>
-        <div class='col-md-8'>
+        <div class='col-md-1'></div>
+        <div class='col-md-10'>
           <div class="panel panel-default">
               <div class="panel-body">
                   <%- body %>
               </div>
           </div>          
         </div>
-        <div class='col-md-2'>
+        <div class='col-md-1'>
         </div>
       </div>            
     </div>
