--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,3 +1,10 @@
+<% if(game.viewScript){%>
+	<script type="text/javascript" src="<%= game.viewScript%>"></script>
+<% }%>
+<% if(game.viewStyle){%>
+	<link href="<%= game.viewStyle%>" rel="stylesheet">
+<% }%>
+
 <div class='game-container'>
 	<h1>Challenges - <%= game.category.name%></h1>
 	<table class='table center'>
@@ -20,7 +27,11 @@
 			</td>
 		</tr>
 	</table>
-	<img src="http://mathworld.wolfram.com/images/eps-gif/SquareDiagonals_700.gif" />
+	<div class='game-body'>
+		<% if(game.viewStyle){%>
+			<%- include(game.viewPage) %>
+		<% }%>
+	</div>	
 	<div class='actions center'>
 		<button class='btn btn-warning'>Restart</button>
 		<button class='btn btn-danger'>Quit</button>
