--- a/views/games/tableGame.ejs
+++ b/views/games/tableGame.ejs
@@ -1,3 +1,5 @@
+<link href="/styles/games/tableGame.css" rel="stylesheet">
+<script type="text/javascript" src="/js/games/tableGame.js"></script>
 <div>
 	<h2>Select all even numbers</h2>
 	<table id='game-table'>
