Updated the main page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<h1>Welcome to the Balance of Power community</h1>
+<h1>Welcome to the Hannover Reader's Site</h1>
 
-<p><a href="/register">Join our community</a> </p>
-<p>Buy the book <a href="http://markjdiez.com/about.html">here.</a> </p>
+<p><a href="/register">Join our Community</a> </p>
+<p>Buy the book <a href="http://markjdiez.com/about.html" target="book">here.</a> </p>
