Updated the main page text

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,9 @@
-<h1>Welcome to the Hannover Reader's Site</h1>
+<h1>Hannover Reader's website</h1>
 
-<p><a href="/register">Join our Community</a> </p>
-<p>Buy the book <a href="http://markjdiez.com/about.html" target="book">here.</a> </p>
+<p>Introduction text goes here. Tell people what the site is about.</p>
+
+<p>In order to use the site you will need to have a copy of the book, The Hannover Game.</p>
+
+<p>Buy the book <a href="http://markjdiez.com/about.html" target="book">here.</a></p>
+
+<a href="/register">Join the reader Community</a></p>
