Updated the main Hannover logo

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -178,7 +178,7 @@
           </div>          
         </div>
         <div class='col-md-2'>
-          <img src="/images/mjd_tree_ph.png" style='width: 100%;'/>
+          <img src="/images/hannover-logo-large.png" style='width: 100%;'/>
           <div class='clear center'>
             <a href="http://markjdiez.com/" target="site">Main site</a>
             |
